--- a/index.html
+++ b/index.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 
+    <main>
+
+      <div class="clear">
+        <p>C</p>
+      </div>
+
+      <div class="display">
+        <p></p>
+      </div>
+
+      <div class="">
+        <p>7</p>
+      </div>
+
+      <div class="">
+        <p>8</p>
+      </div>
+
+      <div class="">
+        <p>9</p>
+      </div>
+
+      <div class="">
+        <p>/</p>
+      </div>
+
+      <div class="">
+        <p>4</p>
+      </div>
+
+      <div class="">
+        <p>5</p>
+      </div>
+
+      <div class="">
+        <p>6</p>
+      </div>
+
+      <div class="">
+        <p>X</p>
+      </div>
+
+      <div class="">
+        <p>1</p>
+      </div>
+
+      <div class="">
+        <p>2</p>
+      </div>
+
+      <div class="">
+        <p>3</p>
+      </div>
+
+      <div class="">
+        <p>-</p>
+      </div>
+
+      <div class="">
+        <p>0</p>
+      </div>
+
+      <div class="">
+        <p>.</p>
+      </div>
+
+      <div class="">
+        <p>=</p>
+      </div>
+
+      <div class="">
+        <p>+</p>
+      </div>
+
+
+
+    </main>
+
+
+
+
+  <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
