finished calc operator functions

--- a/index.html
+++ b/index.html
@@ -10,64 +10,64 @@
 
     <main>
 
-      <div class="clear">
-        <p>C</p>
+      <div>
+        <p class="clear">C</p>
       </div>
 
       <div class="display">
-        <p></p>
+        <p id="display"></p>
       </div>
 
       <div class="">
-        <p>7</p>
+        <p class="inputData">7</p>
       </div>
 
       <div class="">
-        <p>8</p>
+        <p class="inputData" value='8'>8</p>
       </div>
 
       <div class="">
-        <p>9</p>
+        <p class="inputData">9</p>
       </div>
 
       <div class="">
-        <p>/</p>
+        <p class="inputData"> / </p>
       </div>
 
       <div class="">
-        <p>4</p>
+        <p class="inputData">4</p>
       </div>
 
       <div class="">
-        <p>5</p>
+        <p class="inputData">5</p>
       </div>
 
       <div class="">
-        <p>6</p>
+        <p class="inputData">6</p>
       </div>
 
       <div class="">
-        <p>X</p>
+        <p class="inputData"> * </p>
+      </div>
+
+      <div class="one">
+        <p class="inputData">1</p>
       </div>
 
       <div class="">
-        <p>1</p>
+        <p class="inputData">2</p>
       </div>
 
       <div class="">
-        <p>2</p>
+        <p class="inputData">3</p>
       </div>
 
       <div class="">
-        <p>3</p>
+        <p class="inputData"> - </p>
       </div>
 
       <div class="">
-        <p>-</p>
-      </div>
-
-      <div class="">
-        <p>0</p>
+        <p class="inputData">0</p>
       </div>
 
       <div class="">
@@ -75,19 +75,14 @@
       </div>
 
       <div class="">
-        <p>=</p>
+        <p class="equals">=</p>
       </div>
 
       <div class="">
-        <p>+</p>
+        <p class="inputData"> + </p>
       </div>
 
-
-
     </main>
-
-
-
 
   <script type="text/javascript" src="main.js"></script>
   </body>
